styles/styles.scss
* {
    font-family: "Inter";
    font-size: 20px;
}

html {
    font-size: clamp(14px, 1.5vw, 18px);
}

p,
button,
input {
    font-size: 1rem;
}

h1 {
    font-weight: 800;
    font-size: clamp(1.5rem, 3vw, 2.5rem);
}

button {
    border-radius: 8px;
    border: 1px solid transparent;
    padding: 0.6em 1.2em;
    font-weight: 500;
    font-family: inherit;
    cursor: pointer;
    transition: border-color 0.25s;
    margin-top: 8px;
    font-size: 1rem;
}

button:hover {
    border-color: #ffffff;
}

#hintButton {
    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.61);
}





body {
    // height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #15202b;
}


.playerCard {
    width: 75vw;
    background-color: white;
    max-height: 900px;
    display: flex;
    flex-direction: column;
    border: 10px solid black;
    border-radius: 10px;

    &__top {
        width: 100%;
        height: 15%;
        display: flex;
        justify-content: space-between;
        margin-bottom: 3%;
    }

    &__score {
        width: 15vw;
        height: 100%;
        background-color: rgb(255, 255, 255);
        box-shadow: 2px 2px black;
        border-radius: 10px;
        border: 2px solid black;
        text-align: center;
        padding: 5px;
        margin: 10px;
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        margin-left: 20px;
        margin-top: 20px;
    }

    &__title {
        width: 15%;
        height: 100%;
        // background-color: gainsboro;
        // border-radius: 10px;
        // border: 2px solid black;
        text-align: center;
        padding: 5px;
        margin: 10px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        // font-size: ;
    }

    &__timer {
        width: 15vw;
        height: 100%;
        background-color: rgb(255, 255, 255);
        box-shadow: 2px 2px black;
        border-radius: 10px;
        border: 2px solid black;
        text-align: center;
        padding: 5px;
        margin: 10px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin-right: 20px;
        margin-top: 20px;

    }

    &__middle {
        width: 100%;
        height: 50%;
        display: flex;
        justify-content: center;
        margin-bottom: 3%;
    }

    &__question {
        width: 50%;
        height: 100%;
        background-color: #15202b;
        border-radius: 10px;
        border: 2px solid black;
        text-align: center;
        padding: 5px;
        margin: 10px;
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        box-shadow: 2px 2px black;
        color: white;
        font-size: 1.2rem;
    }

    &__bottom {
        display: flex;
        width: 100%;
        height: 35%;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    &__answer {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        width: 100%;
        font-size: 1rem;
    }
}

@media only screen and (max-width: 1000px) {
    .playerCard {
        width: 85vw;
        height: auto;

        &__top {
            flex-direction: column;
            align-items: center;
            margin-bottom: 30px;
            margin-top: 16px;
            justify-content: center;
            height: 200px;
        }

        &__score {
            width: 50%;
            height: auto;
            margin: 0;
            margin-top: 20px;
            margin-bottom: 10px;
        }

        &__title {
            margin: 0;
            order: 1;
            padding: 0;
            height: auto;
            width: auto;
        }

        &__timer {
            margin: 0px;
            width: 50%;
            height: auto;
        }

        &__middle{
            height: 300px;
        }

        &__question {
            width: 75%;
        }

        &__bottom{
            height: 200px;
        }
    }

    #playerInput {
            font-size: 16px;
            touch-action: manipulation;
    }
}

@media only screen and (max-width: 468px) {
    body{
        max-height: 600px;
    }

    .playerCard {
        width: 95vw;
        height: 100%;

        &__top{
            height: 100px;
            margin-top: 20px;
        }

        &__middle{
            height: 200px;
            order: 1;
        }

        &__bottom{
            height: 60px;
            margin-bottom: 10px;
            margin-top: 8px;
        }

    }


    #answerSubmit{
        display: none;
    }

    #currentQuestion{
        font-size: 10px;
    }
}


p {
    margin: 0
}

.hidden {
    display: none;
}

#playerInput {
    margin-bottom: 10px;
    margin-top: 10px;
    border: 1px solid lightgray;
    border-radius: 4px;
    width: 40%;
    text-align: center;
    font-size: 16px;
}

#playerInput:focus {
    outline: solid black 2px;
}

#playerInput::placeholder {
    text-align: center;
    font-size: 1vw;
}

@media only screen and (max-width: 1000px) {
    #playerInput::placeholder {
        font-size: 1.5vw;
    }
}

@media only screen and (max-width: 468px) {
    #playerInput::placeholder {
        font-size: 2vw;
    }
}

#answerSubmit {
    max-width: 200px;
    min-width: 20%;
    background-color: #15202b;
    color: white;
    font-size: 1rem;
}

#skipQuestion {
    border: 1px solid lightgray;
    background-color: white;
    max-width: 200px;
    min-width: 20%;
    margin-bottom: 10px;
    font-size: 1rem;
}

#instructions {
    width: 160px;
    height: 50px;
}

#startGame {
    width: 160px;
    height: 50px;
    background-color: #15202b;
    color: white;
}

.people {
    border-color: rgb(255, 236, 62);
}


.world {
    border-color: rgb(7, 63, 136);
}

.object {
    border-color: rgb(135, 70, 255);
}


.action {
    border-color: rgb(255, 166, 0);
}

.nature {
    border-color: rgb(0, 161, 35);
}

.peopleInner {
    background-color: rgb(255, 236, 62);
    box-shadow: 2px 2px 2px black;
    color: black;
}


.worldInner {
    background-color: rgb(7, 63, 136);
    color: white;
    box-shadow: 2px 2px 2px black;
}

.objectInner {
    background-color: rgb(135, 70, 255);
    color: white;
    box-shadow: 2px 2px 2px black;
}


.actionInner {
    background-color: rgb(255, 166, 0);
    box-shadow: 2px 2px 2px black;
    color: black;
}

.natureInner {
    background-color: rgb(0, 161, 35);
    color: white;
    box-shadow: 2px 2px 2px black;
}

#currentQuestion {
    font-weight: bold;
    font-size: clamp(1.2rem, 2vw, 1.6rem);  
}

#peopleInstruction {
    color: rgb(255, 232, 27);
}


#worldInstruction {
    color: rgb(7, 63, 136);
}

#objectInstruction {
    color: rgb(97, 12, 255);
}


#actionInstruction {
    color: rgb(255, 166, 0);
}

#natureInstruction {
    color: rgb(0, 161, 35);
}

#overlay {
    position: fixed;
    display: none;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 2;
    cursor: pointer;
    color: white;
}

#overlayText {
    position: absolute;
    top: 50%;
    left: 50%;
    // font-size: 50px;
    color: white;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    background-color: #15202b;
    text-align: center;
    border-radius: 8px;
    padding: 50px;
}

